--- a/itgm.css
+++ b/itgm.css
@@ -4,3 +4,12 @@ body {
     font-size: 125%;
     font-family: Libre Baskerville;
 }
+
+li {
+    font-size: 150%
+}
+
+p {
+    font-size: 125%
+}
+
