--- a/itgm.css
+++ b/itgm.css
@@ -13,7 +13,7 @@ p {
     font-size: 125%
 }
 
-div#title-slide, div#end-slide {
+div#title-slide, div#end-slide, div#nix-title-slide {
     text-align: center;
 }
 
